the branch name mistake corrected

--- a/projects.json
+++ b/projects.json
@@ -129,7 +129,7 @@
     {
       "images": [{
         "image1": "https://cdn.jsdelivr.net/gh/Dupanshu/Voyager_gps@master/assets/media/landing.png",
-        "image2": "https://cdn.jsdelivr.net/gh/Dupanshu/Voyager_gps@assets/media/map.png",
+        "image2": "https://cdn.jsdelivr.net/gh/Dupanshu/Voyager_gps@master/assets/media/map.png",
         "image3": "",
         "image4": ""
       }],
