--- a/projects.json
+++ b/projects.json
@@ -2,43 +2,22 @@
   "results": [
     {
       "images": [{
-        "image1": "https://cdn.jsdelivr.net/gh/dupanshu/job-sphere@jobsphere1/assets/img/login.png",
-        "image2": "https://cdn.jsdelivr.net/gh/dupanshu/job-sphere@jobsphere1/assets/img/home.png",
+        "image1": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/alarm/alarmHome.png",
+        "image2": "",
         "image3": "",
         "image4": ""
       }],
-      "name": "Job Sphere",
+      "name": "Alarm Clock",
       "tags": [{
         "tag1": "JavaScript",
-        "tag2": "React.js",
+        "tag2": "HTML",
         "tag3": "CSS",
-        "tag4": "HTML",
+        "tag4": "",
         "tag5": ""
       }],
       "buttons": [{
-        "demo": "https://dupanshu.github.io/job-sphere/",
-        "source": "https://github.com/Dupanshu/job-sphere"
-      }]
-    },
-    
-    {
-      "images": [{
-        "image1": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/eleve/home.png",
-        "image2": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/eleve/menu.png",
-        "image3": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/eleve/reservation.png",
-        "image4": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/eleve/management.png"
-      }],
-      "name": "Elèvè",
-      "tags": [{
-        "tag1": "C#",
-        "tag2": "ASP.NET MVC",
-        "tag3": "SQL",
-        "tag4": "Figma",
-        "tag5": "Authentication"
-      }],
-      "buttons": [{
-        "demo": "",
-        "source": "https://github.com/ChaseSwedlo/eleve"
+        "demo": "https://dupanshu.github.io/alarm/",
+        "source": "https://github.com/Dupanshu/alarm"
       }]
     },
 
@@ -65,6 +44,27 @@
 
     {
       "images": [{
+        "image1": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/eleve/home.png",
+        "image2": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/eleve/menu.png",
+        "image3": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/eleve/reservation.png",
+        "image4": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/eleve/management.png"
+      }],
+      "name": "Elèvè",
+      "tags": [{
+        "tag1": "C#",
+        "tag2": "ASP.NET MVC",
+        "tag3": "SQL",
+        "tag4": "Figma",
+        "tag5": "Authentication"
+      }],
+      "buttons": [{
+        "demo": "",
+        "source": "https://github.com/ChaseSwedlo/eleve"
+      }]
+    },
+
+    {
+      "images": [{
         "image1": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/inventory/login.png",
         "image2": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/inventory/list.png",
         "image3": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/inventory/update.png",
@@ -81,69 +81,6 @@
       "buttons": [{
         "demo": "",
         "source": "https://github.com/Dupanshu/ProductManagement"
-      }]
-    },
-
-    {
-      "images": [{
-        "image1": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/josify_shop/home.png",
-        "image2": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/josify_shop/detail.png",
-        "image3": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/josify_shop/cart.png",
-        "image4": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/josify_shop/about.png"
-      }],
-      "name": "Josify Shop",
-      "tags": [{
-        "tag1": "React.js",
-        "tag2": "CSS",
-        "tag3": "3rd party API",
-        "tag4": "",
-        "tag5": ""
-      }],
-      "buttons": [{
-        "demo": "https://josify-shop.netlify.app/",
-        "source": "https://github.com/Dupanshu/josify-shop"
-      }]
-    },
-
-    {
-      "images": [{
-        "image1": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/taskbook/first.png",
-        "image2": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/taskbook/second.png",
-        "image3": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/taskbook/responsive.png",
-        "image4": ""
-      }],
-      "name": "Task Book",
-      "tags": [{
-        "tag1": "React.js",
-        "tag2": "CSS",
-        "tag3": "CRUD",
-        "tag4": "",
-        "tag5": ""
-      }],
-      "buttons": [{
-        "demo": "https://dupanshu.github.io/task-notebook/",
-        "source": "https://github.com/Dupanshu/task-notebook"
-      }]
-    },
-
-    {
-      "images": [{
-        "image1": "https://cdn.jsdelivr.net/gh/Dupanshu/Voyager_gps@master/assets/media/landing.png",
-        "image2": "https://cdn.jsdelivr.net/gh/Dupanshu/Voyager_gps@master/assets/media/map.png",
-        "image3": "",
-        "image4": ""
-      }],
-      "name": "Voyger GPS",
-      "tags": [{
-        "tag1": "JavaScript",
-        "tag2": "CSS",
-        "tag3": "Location API",
-        "tag4": "UI",
-        "tag5": ""
-      }],
-      "buttons": [{
-        "demo": "https://dupanshu.github.io/Voyager_gps/",
-        "source": "https://github.com/Dupanshu/Voyager_gps"
       }]
     },
 
@@ -170,22 +107,43 @@
 
     {
       "images": [{
-        "image1": "https://cdn.jsdelivr.net/gh/Dupanshu/keybolt@keybolt-js/assets/img/keybolt.png",
-        "image2": "",
-        "image3": "",
-        "image4": ""
+        "image1": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/josify_shop/home.png",
+        "image2": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/josify_shop/detail.png",
+        "image3": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/josify_shop/cart.png",
+        "image4": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/josify_shop/about.png"
       }],
-      "name": "KeyBolt",
+      "name": "Josify Shop",
       "tags": [{
-        "tag1": "JavaScript",
+        "tag1": "React.js",
         "tag2": "CSS",
-        "tag3": "Typing Game",
+        "tag3": "3rd party API",
         "tag4": "",
         "tag5": ""
       }],
       "buttons": [{
-        "demo": "https://dupanshu.github.io/keybolt/",
-        "source": "https://github.com/Dupanshu/keybolt"
+        "demo": "https://josify-shop.netlify.app/",
+        "source": "https://github.com/Dupanshu/josify-shop"
+      }]
+    },
+    
+    {
+      "images": [{
+        "image1": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/taskbook/first.png",
+        "image2": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/taskbook/second.png",
+        "image3": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/taskbook/responsive.png",
+        "image4": ""
+      }],
+      "name": "Task Book",
+      "tags": [{
+        "tag1": "React.js",
+        "tag2": "CSS",
+        "tag3": "CRUD",
+        "tag4": "",
+        "tag5": ""
+      }],
+      "buttons": [{
+        "demo": "https://dupanshu.github.io/task-notebook/",
+        "source": "https://github.com/Dupanshu/task-notebook"
       }]
     },
 
@@ -249,6 +207,90 @@
       "buttons": [{
         "demo": "https://dupanshu.github.io/star-rating/",
         "source": "https://github.com/Dupanshu/star-rating"
+      }]
+    },
+
+    {
+      "images": [{
+        "image1": "https://cdn.jsdelivr.net/gh/Dupanshu/Voyager_gps@master/assets/media/landing.png",
+        "image2": "https://cdn.jsdelivr.net/gh/Dupanshu/Voyager_gps@master/assets/media/map.png",
+        "image3": "",
+        "image4": ""
+      }],
+      "name": "Voyger GPS",
+      "tags": [{
+        "tag1": "JavaScript",
+        "tag2": "CSS",
+        "tag3": "Location API",
+        "tag4": "UI",
+        "tag5": ""
+      }],
+      "buttons": [{
+        "demo": "https://dupanshu.github.io/Voyager_gps/",
+        "source": "https://github.com/Dupanshu/Voyager_gps"
+      }]
+    },
+
+    {
+      "images": [{
+        "image1": "https://cdn.jsdelivr.net/gh/dupanshu/job-sphere@jobsphere1/assets/img/login.png",
+        "image2": "https://cdn.jsdelivr.net/gh/dupanshu/job-sphere@jobsphere1/assets/img/home.png",
+        "image3": "",
+        "image4": ""
+      }],
+      "name": "Job Sphere",
+      "tags": [{
+        "tag1": "JavaScript",
+        "tag2": "React.js",
+        "tag3": "CSS",
+        "tag4": "HTML",
+        "tag5": ""
+      }],
+      "buttons": [{
+        "demo": "https://dupanshu.github.io/job-sphere/",
+        "source": "https://github.com/Dupanshu/job-sphere"
+      }]
+    },
+
+    {
+      "images": [{
+        "image1": "https://cdn.jsdelivr.net/gh/Dupanshu/keybolt@keybolt-js/assets/img/keybolt.png",
+        "image2": "",
+        "image3": "",
+        "image4": ""
+      }],
+      "name": "KeyBolt",
+      "tags": [{
+        "tag1": "JavaScript",
+        "tag2": "CSS",
+        "tag3": "Typing Game",
+        "tag4": "",
+        "tag5": ""
+      }],
+      "buttons": [{
+        "demo": "https://dupanshu.github.io/keybolt/",
+        "source": "https://github.com/Dupanshu/keybolt"
+      }]
+    },
+
+    {
+      "images": [{
+        "image1": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/digi_arena/Screenshot_1.png",
+        "image2": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/digi_arena/Screenshot_2.png",
+        "image3": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/digi_arena/Screenshot_3.png",
+        "image4": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/digi_arena/Screenshot_4.png"
+      }],
+      "name": "Digi Arena",
+      "tags": [{
+        "tag1": "JavaScript",
+        "tag2": "CSS",
+        "tag3": "group-project",
+        "tag4": "design",
+        "tag5": ""
+      }],
+      "buttons": [{
+        "demo": "https://josephadoga.github.io/digi-arena/",
+        "source": "https://github.com/josephadoga/digi-arena"
       }]
     }
   ]
