--- a/projects.json
+++ b/projects.json
@@ -116,7 +116,7 @@
       "tags": [{
         "tag1": "React.js",
         "tag2": "CSS",
-        "tag3": "3rd party API",
+        "tag3": "fake store API",
         "tag4": "",
         "tag5": ""
       }],
@@ -241,7 +241,7 @@
       "name": "Job Sphere",
       "tags": [{
         "tag1": "JavaScript",
-        "tag2": "React.js",
+        "tag2": "Random User API",
         "tag3": "CSS",
         "tag4": "HTML",
         "tag5": ""
