--- a/projects.json
+++ b/projects.json
@@ -241,7 +241,7 @@
       "name": "Job Sphere",
       "tags": [{
         "tag1": "JavaScript",
-        "tag2": "Random User API",
+        "tag2": "User API",
         "tag3": "CSS",
         "tag4": "HTML",
         "tag5": ""
