Dungeon game data added

--- a/projects.json
+++ b/projects.json
@@ -2,6 +2,27 @@
   "results": [
     {
       "images": [{
+        "image1": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/dungeon/1.png",
+        "image2": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/dungeon/2.png",
+        "image3": "",
+        "image4": ""
+      }],
+      "name": "Dungeon Crawler",
+      "tags": [{
+        "tag1": "C#",
+        "tag2": "Events",
+        "tag3": "Console",
+        "tag4": "",
+        "tag5": ""
+      }],
+      "buttons": [{
+        "demo": "",
+        "source": "https://github.com/Dupanshu/AdventureGame"
+      }]
+    },
+
+    {
+      "images": [{
         "image1": "https://cdn.jsdelivr.net/gh/Dupanshu/cdn-projects@main/alarm/alarmHome.png",
         "image2": "",
         "image3": "",
